alterção no testo e inserindo imagem

--- a/teste_passo_GithubPages.html
+++ b/teste_passo_GithubPages.html
@@ -65,14 +65,16 @@
       </p><img src="./infograficos/img/github_pages02.png" alt="Passo 4"/>
       </div>
 
-      <div class="etapa"><h3></h3> <p>
+      <div class="etapa"><h3>TESTE DESEMPENHO DA PAGINA PARA O CELULAR</h3> <p>
 
-      </p><img src="./img/passo4.png" alt="Passo 4"/>
+        https://pagespeed.web.dev/
+      </p><img src="./infograficos/img/teste_celular.png" alt="Passo 4"/>
       </div>
 
-      <div class="etapa"><h3></h3> <p>
+      <div class="etapa"><h3>TESTE DE DESEMPENHO DA PAGINA PARA O COMPUTADOR</h3> <p>
 
-      </p><img src="./img/passo4.png" alt="Passo 4"/>
+        https://pagespeed.web.dev/
+      </p><img src="./infograficos/img/teste_computador.png" alt="Passo 4"/>
       </div>
     </div>
     <div style="height: 60px;"></div>
