--- a/teste_passo_GithubPages.html
+++ b/teste_passo_GithubPages.html
@@ -34,7 +34,7 @@
 
 <div class="content-etapas">
     <div class="etapas">
-      <div class="etapa"><h3>CRIAÇÃO DA PAGINA NO GITHUB PAGES</h3> <p>
+      <div class="etapa"><h3>1. CRIAÇÃO DA PAGINA NO GITHUB PAGES</h3> <p>
         Acesse GitHub.
         Clique em New Repository.
         Dê um nome (ex.: meu-site).
@@ -44,7 +44,7 @@
       </p><img src="./infograficos/img/inicio_github.png" alt="Passo 1"/> 
       </div>
 
-      <div class="etapa"><h3>ADICIONE OS ARQUIVOS DO SEU SITE</h3><p>
+      <div class="etapa"><h3>2. ADICIONE OS ARQUIVOS DO SEU SITE</h3><p>
         Crie um arquivo index.html no seu computador com o conteúdo da página.
        No repositório, clique em Add file → Upload files ou use Git para enviar:
 
@@ -52,26 +52,26 @@
       </p> <img src="./infograficos/img/novo_repositorio.png" alt="Passo 2"/>
       </div>
 
-      <div class="etapa"><h3>ATIVE O GITHUB PAGES</h3><p>
+      <div class="etapa"><h3>3. ATIVE O GITHUB PAGES</h3><p>
         No repositório, vá em Settings → Pages.
         Em Source, selecione a branch main e a pasta / (root).
         Clique em Save.
       </p> <img src="./infograficos/img/github_pages.png" alt="Passo 3"/>
       </div>
 
-      <div class="etapa"><h3>ACESSE SUA PÁGINA</h3> <p>
+      <div class="etapa"><h3>4. ACESSE SUA PÁGINA</h3> <p>
         EXEMPLO: Após alguns segundos, seu site estará disponível em:
         https://seu-usuario.github.io/meu-site/
       </p><img src="./infograficos/img/github_pages02.png" alt="Passo 4"/>
       </div>
 
-      <div class="etapa"><h3>TESTE DESEMPENHO DA PAGINA PARA O CELULAR</h3> <p>
+      <div class="etapa"><h3>5. TESTE DESEMPENHO DA PAGINA PARA O CELULAR</h3> <p>
 
         https://pagespeed.web.dev/
       </p><img src="./infograficos/img/teste_celular.png" alt="Passo 4"/>
       </div>
 
-      <div class="etapa"><h3>TESTE DE DESEMPENHO DA PAGINA PARA O COMPUTADOR</h3> <p>
+      <div class="etapa"><h3>6. TESTE DE DESEMPENHO DA PAGINA PARA O COMPUTADOR</h3> <p>
 
         https://pagespeed.web.dev/
       </p><img src="./infograficos/img/teste_computador.png" alt="Passo 4"/>
